# go_c_rust

./: README.md  main.go
goC/: cee  cee.c  crust  crust.c  funk.c  rust  rust.c
go_rust/: Cargo.toml  build.rs  cbindgen.toml  main
go_rust/lib/: Cargo.toml
go_rust/lib/src/: lib.rs
go_rust/src/: lib.rs  main.rs
