[package]
name = "go_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "lib/src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
lib = {path ="lib"}



[build-dependencies]
cbindgen = "^0.24.3"
